# bone-fracture-detection

./: .editorconfig  .gitignore  .pylintrc  .worktime_before_rename  LOG.md  README.md  ROADMAP.md  TODO.txt  angle_research_2.py  angles.py  angles_research.py  autocrop.py  bone_fracture_detection.py  classification-fémur.md  classification.md  classify.py  correlations.json  detect.py  detect_tilt.py  edge_detection_all_batches.fish  edge_detection_batch.py  generate_edge_detection_batch.py  notes-conversation-a-dumas  notes-conversation-a-dumas.md  optimal-values.yaml  pyproject.toml  quality_check.py  reinforcement-learning.py  requirements.txt  research.ipy  rl_agent.py  rl_environment.py  rl_training.py  screenshot_to_crop.fish  sources.bib  sources.yaml  steps.md  thresholds_by_ml.py  thresholds_contrast_correlation.py  todo.txt  (+2 more)
comptes-rendus/: 2021-04.tex
datasets/phalanx/: phalanx1-1.dcm  phalanx1-10.dcm  phalanx1-11.dcm  phalanx1-12.dcm  phalanx1-13.dcm  phalanx1-14.dcm  phalanx1-15.dcm  phalanx1-16.dcm  phalanx1-17.dcm  phalanx1-18.dcm  phalanx1-19.dcm  phalanx1-2.dcm  phalanx1-20.dcm  phalanx1-21.dcm  phalanx1-22.dcm  phalanx1-23.dcm  phalanx1-24.dcm  phalanx1-25.dcm  phalanx1-26.dcm  phalanx1-27.dcm  phalanx1-28.dcm  phalanx1-29.dcm  phalanx1-3.dcm  phalanx1-30.dcm  phalanx1-31.dcm  phalanx1-32.dcm  phalanx1-33.dcm  phalanx1-34.dcm  phalanx1-35.dcm  phalanx1-36.dcm  phalanx1-37.dcm  phalanx1-38.dcm  phalanx1-39.dcm  phalanx1-4.dcm  phalanx1-40.dcm  phalanx1-41.dcm  phalanx1-42.dcm  phalanx1-43.dcm  phalanx1-44.dcm  phalanx1-45.dcm  (+47 more)
machine-learning/: load_mura.py  nn.py
mcot/: mcot.tex
papers/: tipe_pas_compris_papers
rl_reports/: absent-distal-humeral-shaft-post-trauma--info.json  amputated-finger-with-tendon-retraction--info.json  calcaneal-fracture-17--info+.json  calcaneus-dislocation--info.json  comminuted-humeral-shaft-fracture--info.json  distal-radius-fracture-frykman-type-viii--info.json  distal-tibia-and-fibula-fracture--info.json
scrapers/: encyclopaedia.py
slides/: angles.tex  code-highlight-test.odp  index.slim  no-correlation.xcf  slides.odp  speech.md
slides/mpsi/: angles.tex  (+4 more)
(+57 files in other folders)
