[tool.poetry]
name = "tipe"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <hey@ewen.works>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
scikit-image = "^0.18.1"
opencv-python = "^4.5.1"
numpy = "^1.20.2"
matplotlib = "3.3.4"
pypotrace = "^0.3"
docopt = "^0.6.2"
svgpathtools = "^1.4.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.4b2", allow-prereleases = true}
rich = "^10.1.0"
rope = "^0.19.0"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
